CGDisplayList debug configuration fails to build https://bugs.webkit.org/show_bug.cgi?id=225729

Reviewed by Darin Adler.

* Shared/RemoteLayerTree/RemoteLayerTreeTransaction.mm:
(WebKit::nameForBackingStoreType):
Add missing case for RemoteLayerBackingStore::Type::CGDisplayList.


Canonical link: https://commits.webkit.org/237687@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277439 268f45cc-cd09-0410-ab3c-d52691b4dbfc